--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <h1>Lista de Tarefas ✔</h1>
         <div class="input-area">
             <input type="text" id="taskInput" placeholder="Digite a tarefa...">
+            <label for="prioritySelect">Prioridade:</label>
+            <select id="prioritySelect">
+                <option value="High">Alta</option>
+                <option value="Medium">Média</option>
+                <option value="Low">Baixa</option>
+            </select>
             <button onclick="addTask()">Adicionar</button>
         </div>
         <div class="task-list">
